<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <Button
        android:id="@+id/clear_data_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/demo_options_screen_clear_data_button_label"
        app:layout_constraintBottom_toTopOf="@+id/insert_data_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/insert_data_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/demo_options_screen_insert_data_button_label"
        app:layout_constraintBottom_toTopOf="@+id/show_crypto_currencies_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clear_data_button" />

    <Button
        android:id="@+id/show_crypto_currencies_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/demo_options_screen_show_crypto_currencies_button_label"
        app:layout_constraintBottom_toTopOf="@+id/show_fiat_currencies"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/insert_data_button" />

    <Button
        android:id="@+id/show_fiat_currencies"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/demo_options_screen_show_fiat_currencies_button_label"
        app:layout_constraintBottom_toTopOf="@+id/show_all_currencies_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_crypto_currencies_button" />

    <Button
        android:id="@+id/show_all_currencies_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/demo_options_screen_show_all_currencies_button_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_fiat_currencies" />

    <ProgressBar
        android:id="@+id/progress_indicator"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_all_currencies_button" />
</androidx.constraintlayout.widget.ConstraintLayout>
